# regions_data

./: .gitignore  LICENSE  README.md  app.py  database_ops.py  fetch_data.py  main.py  pyproject.toml  regions.db  requirements.txt
api/: index.py
data/: data2csv.py  data_ops.py  main.py
data/csv/: city.csv  county.csv  province.csv  town.csv
data/json/: city.json  county.json  province.json
data_/: database_ops.py  fetch_data.py  main.py  time_logger.py
data_acq/: fetch_regions.py  import_regions.py
doc/: regions.md  regions_comparison_report.md
scripts/: clean_regions_data.py  fetch_regions.py  import_regions.py
scripts/legacy/: fetch_regions_legacy.py  import_regions_legacy.py
templates/: index.html
