[project]
name = "regions-data"
version = "1.0.2"
description = "中国行政区划数据，包括省级、地级、县级、乡级四级行政区划数据，来源于国家地名信息库。"
authors = [
    { name = "slightlee" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "jinja2",
    "python-multipart"
]

[project.urls]
Homepage = "https://github.com/slightlee/regions_data"
Repository = "https://github.com/slightlee/regions_data.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
